Bug 3891 - xdm build failure (modular tree)
Summary: xdm build failure (modular tree)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xdm (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 1690
  Show dependency treegraph
 
Reported: 2005-07-27 08:32 UTC by David Schleef
Modified: 2005-10-02 17:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
replacement patch (606 bytes, patch)
2005-10-03 10:04 UTC, David Schleef
no flags Details | Splinter Review

Description David Schleef 2005-07-27 08:32:54 UTC
I got a build failure on Ubuntu/hoary while doing a full modular build.

make  all-am
make[1]: Entering directory `/home/ds/xorg/app/xdm'
if gcc -DHAVE_CONFIG_H -I. -I. -I.    -I/opt/xorg/include   -I/opt/xorg/include
  -D_XOPEN_SOURCE -D_BSD_SOURCE -DHASXDMAUTH -DSECURE_RPC -g -O2 -MT xdm-auth.o
-MD -MP -MF ".deps/xdm-auth.Tpo" -c -o xdm-auth.o `test -f 'auth.c' || echo
'./'`auth.c; \
then mv -f ".deps/xdm-auth.Tpo" ".deps/xdm-auth.Po"; else rm -f
".deps/xdm-auth.Tpo"; exit 1; fi
gcc  -g -O2   -o xdm  xdm-auth.o xdm-daemon.o xdm-server.o xdm-dpylist.o
xdm-dm.o xdm-error.o xdm-file.o xdm-netaddr.o xdm-reset.o xdm-resource.o
xdm-protodpy.o xdm-policy.o xdm-session.o xdm-socket.o xdm-streams.o xdm-util.o
xdm-xdmcp.o xdm-mitauth.o xdm-genauth.o xdm-access.o xdm-choose.o xdm-greet.o
xdm-Login.o xdm-verify.o xdm-xdmauth.o xdm-prngc.o xdm-rpcauth.o 
-L/opt/xorg/lib -lXaw8 -lXmu -lXt -lSM -lICE -lXpm -lXp -lXext -lX11 -ldl -lXau
  -L/opt/xorg/lib -lXdmcp   -lcrypt -lpam 
xdm-auth.o(.text+0x11aa): In function `DefineSelf':
/home/ds/xorg/app/xdm/auth.c:1074: undefined reference to `IN6_IS_ADDR_LOOPBACK'
collect2: ld returned 1 exit status
make[1]: *** [xdm] Error 1
make[1]: Leaving directory `/home/ds/xorg/app/xdm'
make: *** [all] Error 2
Comment 1 David Schleef 2005-07-27 08:33:54 UTC
Created attachment 3158 [details]
testcase with debugging-server which crashes reproducible. See comment #50

Possible patch.  I don't know if it needs to be wrapped in HAVE_ magic on other
architectures.
Comment 2 Alan Coopersmith 2005-10-02 09:51:56 UTC
Attachment was lost in bugzilla disk death - please reattach patch if this is
still broken for you (or close if we've already fixed it).
Comment 3 David Schleef 2005-10-03 10:04:03 UTC
Created attachment 3471 [details] [review]
replacement patch

It appears to be this patch.
Comment 4 Alan Coopersmith 2005-10-03 10:36:19 UTC
Looks like the xtrans code only has !defined(WIN32) protection around
<netinet/in.h>, so I'll just use:

#if defined(TCPCONN) && !defined(WIN32)
# include <netinet/in.h>
#endif

Thanks for digging the fix back up - committed to CVS head now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.