Bug #3891 <https://bugs.freedesktop.org/show_bug.cgi?id=3891> xdm build     failure: IN6_IS_ADDR_LOOPBACK undefined (David Schleef)